cmake_minimum_required(VERSION 3.12)
project(datastructure_yanweimin_alvin C)

set(CMAKE_C_STANDARD 11)

add_executable(datastructure_yanweimin_me main.c)
add_subDirectory(ch1)
add_subDirectory(ch2)
add_subDirectory(ch3)
add_subDirectory(ch4)
add_subDirectory(ch5)
add_subDirectory(ch6)
add_subDirectory(ch7)
