set(MAIN2-1 MAIN2-1.c)
set(MAIN2-2 MAIN2-2.c)
set(MAIN2-4 MAIN2-4.c)
set(MAIN2-5 MAIN2-5.c)
set(MAIN2-6 MAIN2-6.c)
set(MAIN2-7 MAIN2-7.c)
set(MAIN2-8 MAIN2-8.c)
set(MAIN2-9 MAIN2-9.c)
set(MAIN2-31 MAIN2-31.c)
set(MAIN2-32 MAIN2-32.c)
add_executable(MAIN2-1 ${MAIN2-1})
add_executable(MAIN2-2 ${MAIN2-2})
add_executable(MAIN2-4 ${MAIN2-4})
add_executable(MAIN2-5 ${MAIN2-5})
add_executable(MAIN2-6 ${MAIN2-6})
add_executable(MAIN2-7 ${MAIN2-7})
add_executable(MAIN2-8 ${MAIN2-8})
add_executable(MAIN2-9 ${MAIN2-9})
add_executable(MAIN2-31 ${MAIN2-31})
add_executable(MAIN2-32 ${MAIN2-32})