set(MAIN5-1 MAIN5-1.c)
set(MAIN5-2 MAIN5-2.c)
set(MAIN5-3 MAIN5-3.c)
set(MAIN5-4 MAIN5-4.c)
set(MAIN5-51 MAIN5-51.c)
set(MAIN5-52 MAIN5-52.c)
set(Main5-6 Main5-6.c)
add_executable(MAIN5-1 ${MAIN5-1})
add_executable(MAIN5-2 ${MAIN5-2})
add_executable(MAIN5-3 ${MAIN5-3})
add_executable(MAIN5-4 ${MAIN5-4})
add_executable(MAIN5-51 ${MAIN5-51})
add_executable(MAIN5-52 ${MAIN5-52})
add_executable(Main5-6 ${Main5-6})