set(MAIN6-1 MAIN6-1.c)
set(MAIN6-2 MAIN6-2.c)
set(MAIN6-3 MAIN6-3.c)
set(MAIN6-4 MAIN6-4.c)
set(MAIN6-5 MAIN6-5.c)
set(main6-6 main6-6.c)
add_executable(MAIN6-1 ${MAIN6-1})
add_executable(MAIN6-2 ${MAIN6-2})
add_executable(MAIN6-3 ${MAIN6-3})
add_executable(MAIN6-4 ${MAIN6-4})
add_executable(MAIN6-5 ${MAIN6-5})
add_executable(main6-6 ${main6-6})